starlark_syntax/src/syntax/grammar_tests/error_chained_comparison.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
0 <= 1 < 2

Error:
error: Parse error: unexpected symbol '<', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:8
  |
1 | 0 <= 1 < 2
  |        ^
  |


Program:
0 == 1 == 2

Error:
error: Parse error: unexpected symbol '==', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:8
  |
1 | 0 == 1 == 2
  |        ^^
  |


Program:
a == b != c

Error:
error: Parse error: unexpected symbol '!=', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:8
  |
1 | a == b != c
  |        ^^
  |


Program:
a < b > c

Error:
error: Parse error: unexpected symbol '>', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:7
  |
1 | a < b > c
  |       ^
  |


Program:
a in b in c

Error:
error: Parse error: unexpected keyword 'in', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:8
  |
1 | a in b in c
  |        ^^
  |


Program:
a in b not in c

Error:
error: Parse error: unexpected keyword 'not', expected end of expression (comparisons are not associative in Starlark)
 --> error_chained_comparison:1:8
  |
1 | a in b not in c
  |        ^^^
  |
